# atom

./: .gitignore  CNAME  README.md  install.sh  pyproject.toml  requirements.txt  setup.py  test.py
.github/workflows/: sphinx-docs.yml
atom/: __init__.py  utils.py
atom/base/: epistula.py  miner.py  neuron.py  ttl.py  validator.py  weights.py
atom/chain/: chain.py  chain_utils.py  generic.py
atom/docs/: conf.py
atom/docs/_build/doctrees/: atom.base.doctree  atom.chain.doctree  atom.doctree  atom.epistula.doctree  atom.mock.doctree  atom.organic_scoring.doctree  atom.organic_scoring.organic_queue.doctree  atom.organic_scoring.synth_dataset.doctree  environment.pickle  index.doctree  modules.doctree
atom/docs/_build/html/: .buildinfo  atom.base.html  atom.chain.html  atom.epistula.html  atom.html  atom.mock.html  atom.organic_scoring.html  atom.organic_scoring.organic_queue.html  atom.organic_scoring.synth_dataset.html  genindex.html  index.html  (+5 more)
atom/epistula/: README.md  __init__.py  epistula.py
atom/handlers/: handler.py  s3_client.py
atom/logging/: github.py
atom/mock/: mock.py  mock_identities.py
atom/organic_scoring/: README.md  __init__.py  organic_scoring_base.py  utils.py
atom/organic_scoring/organic_queue/: __init__.py  organic_queue.py  organic_queue_base.py
atom/organic_scoring/synth_dataset/: __init__.py  synth_dataset_conversation.py
base/: config.py  miner.py  neuron.py  ttl.py  validator.py
chain/: chain.py
docs/: atom.epistula.rst  atom.mock.rst  atom.organic_scoring.organic_queue.rst  atom.organic_scoring.rst  atom.organic_scoring.synth_dataset.rst  atom.rst  conf.py  index.rst  modules.rst  tests.rst
mock/: mock.py
tests/: test_base.py  test_epistula.py  test_handlers.py  test_organic.py  test_s3.py
utils/: chain.py  generic.py
(+21 files in other folders)
