[tool.poetry]
name = "atom" 
version = "0.1.0"
description = "macrocosmos-sdk"
authors = ["Brian McCrindle <brian@macrocosmos.ai>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13" # Adjust based on your Python version
bittensor = ">=8.4.5"
pydantic = ">=2.3,<3"
datasets = ">=2.14.6"
loguru = "^0.7.2"
substrate-interface = "^1.7.11"
numpy = "2.0.1"

[tool.poetry.dev-dependencies]
black = "^23.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
