[tool.poetry]
name = "atom" 
version = "1.0.0"
description = "macrocosmos-sdk"
authors = ["Brian McCrindle <brian@macrocosmos.ai>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13" # Adjust based on your Python version
bittensor = ">=8.3.1"
pydantic = ">=2.3,<3"
datasets = ">=2.14.6"
nltk = "==3.8.1"
loguru = "^0.7.2"
torch = "2.3.0"
substrate-interface = "^1.7.11"

[tool.poetry.dev-dependencies]
black = "^23.9.1"
sphinx = "8.1.3"
sphinx-book-theme = "1.1.3"
sphinx-autodoc-typehints = "2.5.0"
ghp-import = "2.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
